Resolve ui issue with ResultsPerPage changes and DataTable updates Resolve z-index on components - #1245

--- a/src/sass/components/sui.scss
+++ b/src/sass/components/sui.scss
@@ -293,12 +293,12 @@
 .sui-columns-toggle {
   position: absolute !important;
   right: 120px;
-  z-index: 1000;
+  z-index: 900; //must be lower than navbar but above fixed header in DataTable
 }
 
 .sui-react-select {
   position: relative;
-  z-index: 1000;
+  z-index: 900; //must be lower than navbar but above fixed header in DataTable
 }
 
 .sui-filterableComponent {
